--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -11,7 +11,7 @@ interface Props {
     duration: string
 }
 
-const { title, description, tags, href, duration } = Astro.props
+const { title, description, tags, href, duration, imgUrl } = Astro.props
 const randomId = Math.floor(Math.random() * 1000)
 ---
 
@@ -21,11 +21,11 @@ const randomId = Math.floor(Math.random() * 1000)
             class="flex flex-col border border-[#242424] bg-[#1C1C1C] rounded-sm cursor-pointer max-w-[430px] max-h-[436px] w-full h-full"
         >
             <img 
-                src={`https://picsum.photos/seed/${randomId}/400/250`} 
+                src={ imgUrl ? imgUrl : `https://picsum.photos/seed/${randomId}/400/250`} 
                 width={430}
                 height={234}
                 alt="Blog Image"
-                class="image-style h-full"
+                class="image-style"
                 loading="lazy"
             />
             <div
