--- a/src/components/blog/RecentBlogCard.astro
+++ b/src/components/blog/RecentBlogCard.astro
@@ -10,10 +10,10 @@ const { title, description, imgUrl, href } = Astro.props
 const randomId = Math.floor(Math.random() * 1000)
 ---
 <div class="bg-gradient-to-t from-[#181818] to-[#2C2C2C] bg-clip-border p-[1.5px] shadow-inner rounded-lg w-full h-[310px]">
-    <div class="flex flex-col bg-[#282828] bg-opacity-70 rounded-lg">
+    <div class="flex flex-col bg-[#282828] bg-opacity-70 rounded-lg h-full">
         <a href={href}>
             <img
-                src={`https://picsum.photos/seed/${randomId}/400/250`}
+                src={ imgUrl ? imgUrl : `https://picsum.photos/seed/${randomId}/400/250`} 
                 alt="Blog Card"
                 width={430}
                 height={234}
