--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -21,7 +21,7 @@ const posts = (await getCollection('project')).sort(
             <p class="text-sm sm:text-base font-normal mt-2 text-[#7E7E7E]">Some of my works that i want to share</p>
         </div>
 
-        <!-- <div class="mt-12 sm:mt-16 lg:mt-28 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-y-8 sm:gap-y-12 gap-x-3 blog-index-child">
+        <div class="mt-12 sm:mt-16 lg:mt-28 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-y-8 sm:gap-y-12 gap-x-3 blog-index-child">
             {posts.map((item) => {
                 return (
                     <ProjectPageCard 
@@ -30,15 +30,10 @@ const posts = (await getCollection('project')).sort(
                         href={`/project/${item.slug}/`}
                         iconStackName={item.data.techStack}
                         projectUrl={item.data.projectUrl}
+                        heroImage={item.data.heroImage}
                     />
                   );
             })}
-        </div> -->
-
-        <div class="flex justify-center text-center mt-20">
-            <h1 class="text-[64px] font-semibold text-[#F6F6F6] mb-4">
-                Under Construction!
-            </h1>
         </div>
     </div>
 </MainLayout>
@@ -66,10 +61,10 @@ const posts = (await getCollection('project')).sort(
     const blogChildren = document.querySelectorAll(".blog-index-child");
 
     animate(blogChildren, 
-        { 
+        {
             opacity: [0, 1], 
             transform: ['translateY(30px)', 'translateY(0px)'] 
-        }, 
+        },
         { 
             delay: stagger(0.1),
             type: spring, 
