--- a/src/section/home/Introduction.astro
+++ b/src/section/home/Introduction.astro
@@ -50,17 +50,29 @@ import StackBox from "@components/StackBox.astro"
                 text="Read my blog"
                 className="homebutton"
             />
-            <button class="rounded-[10px] text-[#A2A2A2] text-lg font-medium hover:-translate-y-1 transform duration-200 bg-[#161616] px-8 py-3">
+            <button class="rounded-[10px] text-[#A2A2A2] text-lg font-medium hover:-translate-y-1 transform duration-200 bg-[#161616] px-8 py-3 resume-button">
                 My Resume
             </button>
         </div>
     </div>
 </div>
 <script>
-    const buttons = document.querySelectorAll('button.homebutton');
-    buttons.forEach((button) => {
-        button.addEventListener('click', () => {
-            location.replace('/blog')
-        });
-    })
+    document.addEventListener("DOMContentLoaded", () => {
+        const buttons = document.querySelectorAll("button.homebutton")
+        buttons.forEach((button) => {
+            button.addEventListener("click", () => {
+                location.replace("/blog")
+            })
+        })
+
+        const buttonResume = document.querySelector("button.resume-button")
+        if (buttonResume) {
+            buttonResume.addEventListener("click", () => {
+                const link = document.createElement("a")
+                link.href = "/Rafi-Irfansyah-December-2024.pdf"
+                link.download = "Rafi-Current-Resume.pdf"
+                link.click()
+            })
+        }
+    });
 </script>
