--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -5,6 +5,7 @@ import Navbar from '@components/Navbar.astro';
 import '@fontsource-variable/inter';
 import { AstroFont } from 'astro-font';
 import { join } from "node:path";
+import '@/styles/global.css'
 
 interface Props {
 	title: string
