--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Traits from "src/section/home/Traits.astro"
 import Quotes from "src/section/home/Quotes.astro"
 import RecentBlog from "src/section/home/RecentBlog.astro"
 import Projects from "src/section/home/Projects.astro"
+import '@/styles/global.css'
 ---
 <MainLayout
     title="Home"
