--- a/src/components/blog/TableOfContent.astro
+++ b/src/components/blog/TableOfContent.astro
@@ -10,17 +10,19 @@ interface Props {
 const { headings } = Astro.props
 ---
 
-<div class="flex flex-col rounded-lg text-[#F6F6F6] w-[310px]">
-    <p class="mb-3 text-2xl font-semibold">On this page</p>
+<div class="toc-container">
+  <div class="flex flex-col rounded-lg text-[#F6F6F6] w-[310px] p-4 border border-[#272727]">
+    <p class="mb-3 text-xl font-semibold">On this page</p>
     <ul>
-        {
-          headings.map((heading) => (
-            <li class={`depth-${heading.depth} space-y-4 text-[#83868A] hover:text-white`} >
-              <a href={`#${heading.slug}`} class="block">{heading.text}</a>
-            </li>
-          ))
-        }
-      </ul>
+      {
+        headings.map((heading) => (
+          <li class={`depth-${heading.depth} space-y-4 text-[#83868A] hover:text-white`} >
+            <a href={`#${heading.slug}`} class="block">{heading.text}</a>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
 </div>
 <style>
   .depth-2 { padding-left: 0; }
@@ -28,4 +30,9 @@ const { headings } = Astro.props
   .depth-4 { padding-left: 2rem; }
   .depth-5 { padding-left: 3rem; }
   .depth-6 { padding-left: 4rem; }
+
+  .toc-container {
+    position: sticky;
+    top: 10rem;
+  }
 </style>
