feat: fixing .mdx config, fixing crashing package

--- a/src/components/blog/Comments.astro
+++ b/src/components/blog/Comments.astro
@@ -15,7 +15,9 @@
     data-theme="preferred_color_scheme"
     data-lang="en"
     crossorigin="anonymous"
-    async>
+    async
+    is:inline
+  >
   </script>
 </div>
 <style>
