--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,19 +1,23 @@
 ---
+// Import utilities from `astro:content`
 interface Props {
 	title: string;
 	description: string;
 	image?: string;
+	canonicalURL?: URL | string;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-
-const { title, description } = Astro.props;
+const {
+	title,
+	description,
+	image = '/blog-logo.png', 
+	canonicalURL = new URL(Astro.url.pathname, Astro.site),
+} = Astro.props;
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="stylesheet" href="/global.css" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
@@ -27,12 +31,14 @@ const { title, description } = Astro.props;
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
+<meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={Astro.url} />
+<meta property="twitter:url" content={canonicalURL} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
